Prise en compte des commentaires du professeur sur le CSS et HTML

--- a/AC_profil.html
+++ b/AC_profil.html
@@ -39,7 +39,7 @@
       
         nav li {
             display: inline-block;
-            margin-left: 25px;
+            margin-left: 15px;
         }
     
         .connecter-button{
@@ -117,8 +117,9 @@
         <h1> Happy Nutrition </h1>
         <nav>
             <ul>
-                <li><a class="active" href="AC_alimentation.html">Alimentation</a></li>
+                <li><a href="AC_profil.html">Profil</a></li>
                 <li><a href="AC_journal.html">Journal</a></li>
+                <li><a href="AC_alimentation.html">Alimentation</a></li>
             </ul>
         </nav>
         <a class="connecter-button" href="SC_accueil.html">Accueil</a>
