--- a/SC_regimes.html
+++ b/SC_regimes.html
@@ -39,7 +39,7 @@
       
         nav li {
             display: inline-block;
-            margin-left: 25px;
+            margin-left: 10px;
         }
     
         .connecter-button{
@@ -126,6 +126,7 @@
                 <li><a href="SC_pratique.html">Pratique nutritionnelle</a></li>
                 <li><a href="SC_pratiqueSport.html">Pratique sportive</a></li>
                 <li><a href="SC_recettes.html">Recettes</a></li>
+                <li><a href="SC_regimes.html">Régimes</a></li>
             </ul>
         </nav>
         <a class="connecter-button" href="SC_accueil.html">Accueil</a>
