--- a/SC_pratique.html
+++ b/SC_pratique.html
@@ -39,7 +39,7 @@
       
         nav li {
             display: inline-block;
-            margin-left: 25px;
+            margin-left: 10px;
         }
     
         .connecter-button{
@@ -128,6 +128,7 @@
         <nav>
             <ul>
                 <li><a href="SC_articles.html">Articles</a></li>
+                <li><a href="SC_pratique.html">Pratique nutritionnelle</a></li>
                 <li><a href="SC_pratiqueSport.html">Pratique sportive</a></li>
                 <li><a href="SC_recettes.html">Recettes</a></li>
                 <li><a href="SC_regimes.html">Régimes</a></li>
